[gd_scene load_steps=2 format=3 uid="uid://bt64ym4yk5cr0"]

[ext_resource type="Script" uid="uid://cy45kkssbk7ma" path="res://objects/audio_slider.gd" id="1_1badp"]

[node name="AudioSlider" type="HBoxContainer"]
script = ExtResource("1_1badp")
bus_type = "SFX"

[node name="AUDIO_BUS_NAME" type="Label" parent="."]
custom_minimum_size = Vector2(68, 0)
layout_mode = 2
text = "SFX"

[node name="HSlider" type="HSlider" parent="."]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
value = 50.0

[node name="VALUE" type="Label" parent="."]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
text = "50"
horizontal_alignment = 1

[connection signal="drag_ended" from="HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="drag_started" from="HSlider" to="." method="_on_h_slider_drag_started"]
